--- a/views/home.ejs
+++ b/views/home.ejs
@@ -65,7 +65,7 @@
             var deckList = document.createElement("ul");
             deckList.className = "deck";
             var deckHeader = document.createElement("li");
-            deckHeader.innerHTML = "相似度："+deck.percent;
+            deckHeader.innerHTML = "相似度："+deck.percent+"<a href="+deck.deckSourceUrl+">卡组详解</a>";
             deckList.appendChild(deckHeader);
             for (var i = 0; i < deck.originalDeck.length; i++) {
                 var cardItem = document.createElement("li");
