--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,7 +21,7 @@
     <script src="/plugins/ligrid/ligrid.js"></script>
     <script type="text/javascript">
         var cards = <%- JSON.stringify(cards)%>;
-        var userdata = <%- JSON.stringify(userdata.cards)%>;
+        var userdata = <%- JSON.stringify(userdata ? userdata.cards : [])%>;
 
         var ligrid = new Ligrid({countPerpage:20,gridid:"ligrid",userData:userdata});
         ligrid.loadData(cards);
