--- a/views/home.ejs
+++ b/views/home.ejs
@@ -109,9 +109,9 @@
             decksArea.appendChild(deckList);
         }
         // if (/iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream) {
-            $(".ligrid-li").click(function() {
-                ligrid.itemClick(this);
-            });
+            // $(".ligrid-li").click(function() {
+            //     ligrid.itemClick(this);
+            // });
         // };
     </script>
 </body>
