css 伪类选择器 practice

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,1 +1,1 @@
-*{padding:0;margin:0;font-family:'San Francisco','HelveticaNeue','华文黑体','Helvetica Neue','Hiragino Sans','Tahoma','DroidSanFallback','DroidSan';-webkit-tap-highlight-color:rgba(0,0,0,0)}.deck{padding:20px}
+*{padding:0;margin:0;font-family:'San Francisco','HelveticaNeue','华文黑体','Helvetica Neue','Hiragino Sans','Tahoma','DroidSanFallback','DroidSan';-webkit-tap-highlight-color:rgba(0,0,0,0)}.deck li{list-style:none;padding:10px}.deck li:nth-child(2n){background:#dadada}
