--- a/public/stylesheets/_home.less
+++ b/public/stylesheets/_home.less
@@ -1,3 +1,12 @@
 .deck{
-    padding: 20px;
+    /*padding: 20px;*/
+
+    li{
+        list-style:none;
+        /*height: 40px;*/
+        padding: 10px;
+    }
+    li:nth-child(2n){
+        background: #DADADA;
+    }
 }
