--- a/public/stylesheets/_home.less
+++ b/public/stylesheets/_home.less
@@ -1,12 +1,84 @@
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 .deck{
-    /*padding: 20px;*/
-
+    padding: 0;
+    list-style-type: none;
+    overflow: auto;
+    max-width: 350px;
+    margin: 0 auto;
     li{
         list-style:none;
-        /*height: 40px;*/
-        padding: 10px;
-    }
-    li:nth-child(2n){
-        /*background: #DADADA;*/
+        padding: 0;
+        margin: 0 0 2px;
+        position: relative;
+        z-index: 1;
+        /*border-right: 5px solid #1b1b1b;*/
+        .card-image{
+            position: absolute;
+            right: 10px;
+            top: 0;
+            z-index: 1;
+        }
+        a.card-frame {
+            font-size: 18px;
+            display: block;
+            position: relative;
+            height: 40px;
+            background-color: #1b1b1b;
+            font-family: "Lato",sans-serif;
+            border-right: 5px solid #1b1b1b;
+            
+        }
+        .rarity-1{
+            border-right-color: #2ecc71 !important;
+        }
+        .rarity-2{
+            border-right-color: #6e6e6e !important;
+        }
+        .rarity-3{
+            border-right-color: #0070dd !important;
+        }
+        .rarity-4{
+            border-right-color: #a335ee !important;
+        }
+        .rarity-5{
+            border-right-color: #ff8000 !important;
+        }
+        a.card-frame span.card-name {
+            font-size: 16px;
+            position: relative;
+            left: 40px;
+            top: 4px;
+            text-transform: uppercase;
+            color: #fff;
+            font-weight: 700;
+            z-index: 2;
+        }
+        .card-cost {
+            background: #286eb2;
+            padding: 5px 0 0;
+            color: #fff;
+            height: 40px;
+            width: 30px;
+            text-align: center;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+        .card-count {
+            position: absolute;
+            z-index: 2;
+            right: 0;
+            background: #2d2d2d;
+            color: #fff;
+            width: 30px;
+            height: 40px;
+            padding-top: 5px;
+            text-align: center;
+            display: inline-block;
+        }
     }
 }
