--- a/public/stylesheets/_home.less
+++ b/public/stylesheets/_home.less
@@ -3,6 +3,9 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+a{
+    text-decoration:none;
+}
 .deck{
     padding: 0;
     list-style-type: none;
