--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 <link rel='stylesheet' href='/stylesheets/style.css' />
 <link rel='stylesheet' href='/plugins/ligrid/ligrid.css' />
+<title>BuildMyStone</title>
 </head>
 <body>
   卡牌职业
